changed name on welcome and layout

--- a/client/about.html
+++ b/client/about.html
@@ -1,27 +1,30 @@
 <template name="about">
 
 <div class="jumbotron">
-	<h1>About the App</h1>
+	<h1>About So'Deis</h1>
 	<p>
-		Say something about the app.
+		Are you hungry? Do you want to party, but nowhere to go? Are you having party? A social event? Well, you have come to perfect place. You can tell the Brandeis Students what is happening in and outside of campus. The perfect place where you can find who is having free food!  
 		
 	</p>
 </div>
-<h2>Person 1</h2>
+<h2>Shadow Walker</h2>
 <p>
-	Bio for person one goes here 
+	I'm a girl and I'm the boss.  
 </p>
-<h2>Person 2</h2>
+<h2> Ricardo Kisack Jr.</h2>
 <p>
-	Bio for person 2 goes here 
+	I am from New Orleans and I am the most interesting person in the world.
 </p>
-<h2>Person 3</h2>
+<h2>Black Sensation</h2>
 <p>
-	Bio for person 3 goes here 
+	I'm Black Sensation a.k.a Alberto Del Rio. I am the coolest guy alive and welcome to this masterpiece of an app. 
 </p>
-<h2>Person 4</h2>
 <p>
-	Bio for person 4 goes here 
+<h2>Fred</h2>
+He is lying ^
 </p>
-etc.
+
+<p>
+	The creators aren't responsible for any damages physically nor mentally that occur during the parties/ events that appear in this app. The creators DO NOT host any of this parties. ALL parties/events are hosted by third parties. 
+</p>
 </template>
