--- a/client/welcome.html
+++ b/client/welcome.html
@@ -1,15 +1,16 @@
 <template name="welcome">
 	<div class="jumbotron">
-		<h1>Prepare to be AMAZED</h1>
+		<h1>Prepare to Party For Free!</h1>
 		<p>
-			We promise to provide you with the best app for your needs!
+			We Promise To Provide You The Best App! 
+				It will help you to find places where parties and free food are held!!!! Let's Go Brandeis!
 		</p>
 	</div>
 	
 	{{#if currentUser}}
-	Yay! You are logged in!
+	See, You are logged in the Fun!
 	{{else}}
-	You should log in!
+	You should log in, if you want to see parties!
 	{{/if}}
 
 
