modified signin and chat

--- a/client/chat.html
+++ b/client/chat.html
@@ -2,7 +2,10 @@
 	
 	{{#if currentUser}}
 	<form id="chatform">
-		<input type="text" id="chatinput" placeholder="Enter your chat text here" size="100%">
+		Name: <input type="text" id="eventname" size="100%"> <br>
+		Date: <input type="text" id="eventdate" size="100%"> <br> 
+		<input type= "submit">
+
 	</form>
 	{{else}}
 	You must be signed in to post comments!
@@ -23,6 +26,6 @@
 
 <template name="chatitem">
 	<tr>
-		<td>{{who}} said </td> <td>{{what}}</td><td> at {{when}}</td>
+		<td>{{who}} said </td> <td>{{eventname}}</td><td> at {{when}}</td>
 	</tr>
 </template>
