--- a/client/welcome.html
+++ b/client/welcome.html
@@ -1,10 +1,11 @@
 <template name="welcome">
 	<div class="jumbotron">
-		<h1>Prepare to Party For Free!</h1>
+		<h1><img src="http://www.brandeis.edu/now/2015/august/images/15orientation405.jpg" height="100" width="200" align="middle"> Prepare to Party For Free!</h1>
 		<p>
 			We Promise To Provide You The Best App! 
 				It will help you to find places where parties and free food are held!!!! Let's Go Brandeis!
 		</p>
+
 	</div>
 	
 	{{#if currentUser}}
