--- a/client/event.html
+++ b/client/event.html
@@ -38,8 +38,8 @@
 		<td>{{eventname}}</td>
 		<td> at {{when}}</td>
 		<td>{{likes}}</td>
-		<td><button type="button" class="btn btn-success btn-xs">Like</button>
-			<button type="button" class="btn btn-danger btn-xs">DisLike</button></td>
+		<td><button type="button" id="like" class="btn btn-success btn-xs">Like</button>
+			<button type="button" id="dislike" class="btn btn-danger btn-xs">DisLike</button></td>
 			
 	</tr>
 	</template>
