--- a/client/about.html
+++ b/client/about.html
@@ -11,7 +11,7 @@
 <p>
 	I'm a girl and I'm the boss! 
 </p>
-	<img src="http://imgprix.com/web/wallpapers/anime-girl-sad-face-black-and-white/1600x1200.jpg" height= "300" width="450">
+	<img src="http://imgprix.com/web/wallpapers/anime-girl-sad-face-black-and-white/1600x1200.jpg" height= "250" width="350">
 <h2> Ricardo Kisack Jr.</h2>
 <p>
 	I am from New Orleans and I am the most interesting person in the world.
@@ -26,6 +26,8 @@
 <h2>Fred</h2>
 He is lying ^
 </p>
+<img src="http://static6.businessinsider.com/image/55918b77ecad04a3465a0a63/nbc-fires-donald-trump-after-he-calls-mexicans-rapists-and-drug-runners.jpg" height= "250" width="350">
+
 
 <p>
 	The creators aren't responsible for any damages physically nor mentally that occur during the parties/ events that appear in this app. The creators DO NOT host any of this parties. ALL parties/events are hosted by third parties. 
