made some changes

--- a/client/party.html
+++ b/client/party.html
@@ -17,7 +17,7 @@ Please fill out the following a form if you want to post an event.<br>
 	</form>
 
 	
-	<h2>Showing the last 10 of {{numchats}} chats</h2>
+	<h2>Showing the last {{numchats}} of 100 Parties </h2>
 	<table class="table table-bordered">
 		<tbody>
 	{{#each partylines}}
