--- a/client/event.html
+++ b/client/event.html
@@ -18,7 +18,7 @@ Please fill out the following a form if you want to post an event.<br>
 
 	
 
-	<h2>Showing the last 100 of {{numchats}} events </h2>
+	<h2>Showing the last {{numchats}} of 100 events </h2>
 	<table class="table table-bordered">
 
 
