--- a/client/event.html
+++ b/client/event.html
@@ -11,7 +11,7 @@ Please fill out the following a form if you want to post an event.<br>
 	<form id="eventform">
 		Eventname: <input type="text" id="eventname" size="100%"> <br>
 		Location:  <input type="text" id="eventlocation" size="100%"> <br>
-		Date:      <input type="datetime" id="eventdate" size="100%"> <br> 
+		Date/Time:      <input type="datetime" id="eventdate" size="100%"> <br> 
 		<input type= "submit">
 
 	</form>
@@ -26,7 +26,7 @@ Please fill out the following a form if you want to post an event.<br>
       <tr>
         <th>Organizer</th>
         <th>Event</th>
-        <th>Time</th>
+        <th>Time/Date</th>
         <th>Ratings</th>
         <th>Action</th>
         <th>Location</th>
