--- a/client/feedback.html
+++ b/client/feedback.html
@@ -11,7 +11,7 @@
 	You must be signed in to post comments!
 	{{/if}}
 	
-	<h2>Showing the last {{numcomments}} of 100 Comments</h2>
+	<h2> Comments</h2>
   <table class="table table-bordered">
 	  <tbody>
 	{{#each commentlines}}
