--- a/client/events.html
+++ b/client/events.html
@@ -1,7 +1,7 @@
 <template name="events">	
 	{{#if currentUser}}
 
-	<form id="eventform" class="bg-info">
+	<form id="eventform" class="bg-danger">
 		<div class="input-group">
 		  <span class="input-group-addon">Name</span>
 		  <input type="text" id="eventname" class="form-control">
