--- a/client/feedback.html
+++ b/client/feedback.html
@@ -1,31 +1,31 @@
-<template name="feedback">
+<template name="feedbackPage">
 	<div class="jumbotron">
 		<h1>Feedback</h1>
 		<p> 
-		Hi everyone, I hope you had a great time at the party. Now, we at So'Deis, want to make your experience memorable! Did you had a bad experience? Did you had the best time of your life? Please let's us know, so that next time it will be even more memorable.
+		Hope this app was helpful. Please let us know how feel about this app so we can make changes to fit your preferences. Users are our main priority so feel free to leave us your feedback here!!
 		</p>
 	</div>
 	{{#if currentUser}}
 	<form id="feedbackform">
 		<div class="input-group">
 		  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-commenting-o"></i></span>
-		  <input type="text" id="comments" class="form-control" placeholder="Enter your comment text here" size="100%" aria-describedby="basic-addon1">
+		  <input type="text" id="feedback" class="form-control" placeholder="Enter your feedback here" size="100%" aria-describedby="basic-addon1">
 		</div>
 	</form>
 	{{else}}
 	<div class="alert alert-danger alert-dismissible" role="alert">
 	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	  <i class="fa fa-info-circle red"></i> You must be logged in to create comments!
+	  <i class="fa fa-info-circle red"></i> You must be logged in to submit feedback!
 	</div>
 	{{/if}}
 	<br>
 	<div class="panel panel-primary">
 	  <div class="panel-heading">
-	  	<h5>Showing the last {{ofTen}} of {{numcomments}} comments</h5>
+	  	<h5>Showing the {{numfeedbacks}} feedback comments</h5>
 	  </div>
 	  <div class="panel-body list-group">
-	  	{{#each commentlines}}
-		{{> commentitem}}
+	  	{{#each feedbacks}}
+		{{> feedback}}
 		{{/each}}
 	  </div>
 	</div>
@@ -34,9 +34,9 @@
 
 
 
-<template name="commentitem">
+<template name="feedback">
 	<div class="list-group-item">
-    <p class="list-group-item-text">{{what}}</p>
+    <p class="list-group-item-text">{{feedback}}</p>
     <h6 class="list-group-item-heading text-muted"><i class="fa fa-user"></i> {{who}} <i class="fa fa-calendar"></i> {{when}}</h6>
   </div>
 </template>
