--- a/client/about.html
+++ b/client/about.html
@@ -15,9 +15,9 @@
 				<img src="/images/profile.png" class="img-responsive img-thumbnail" alt="Responsive image">
 			</div>
 			<div class="col-md-6 text-center">
-				<h2>Shadow Walker</h2>
+				<h2>G.G.Shadow</h2>
 				<p>
-					I'm a girl and I'm the boss! 
+					I'm proudly the only gril and co-crator of this website! Be carful with the things you do in parties and things you post . The things you do will be forever in the internet.
 				</p>
 			</div>
 		</div>
