--- a/client/about.html
+++ b/client/about.html
@@ -25,7 +25,7 @@
 	<div class="col-md-6 well">
 		<div class="row">
 			<div class="col-md-6 text-center">
-				<img src="/images/profile.png" class="img-responsive img-thumbnail" alt="Responsive image"> 
+				<img src="/images/richard.jpg" class="img-responsive img-thumbnail" alt="Responsive image"> 
 			</div>
 			<div class="col-md-6 text-center">
 				<h2> Ricardo Kisack Jr.</h2>
