--- a/client/about.html
+++ b/client/about.html
@@ -3,7 +3,7 @@
 <div class="jumbotron">
 	<h1 id="hungry">About So'Deis</h1>
 	<p>
-		Are you hungry? Do you want to party, but nowhere to go? Are you having party? A social event? Well, you have come to perfect place. You can tell the Brandeis Students what is happening in and outside of campus. The perfect place where you can find who is having free food!  
+		Are you hungry? Do you want to party, but nowhere to go? Are you having party? A social event? Well, you have come to perfect place. You can tell the Brandeis Students what is happening on and outside of campus. The perfect place where you can find who is having free food!  
 		
 	</p>
 </div>
@@ -17,7 +17,7 @@
 			<div class="col-md-6 text-center">
 				<h2>G.G.Shadow</h2>
 				<p>
-					I'm proudly the only gril and co-crator of this website! Be carful with the things you do in parties and things you post . The things you do will be forever in the internet.
+					I'm proudly the only gril and co-creator of this website! Be careful with the things you do in parties and things you post. The things you do will be forever in the internet.
 				</p>
 			</div>
 		</div>
@@ -30,7 +30,7 @@
 			<div class="col-md-6 text-center">
 				<h2> Ricardo Kisack Jr.</h2>
 				<p>
-					I am from New Orleans and I am the most interesting person in the world.
+					I am one of the co-creators of this website. I advise you to use this website responsibly and have fun.
 				</p>
 			</div>
 		</div>
