--- a/client/events.html
+++ b/client/events.html
@@ -33,6 +33,7 @@
 		  	<option value="Industry Visit">Industry Visit</option>
 		  	<option value="Festival">Festival</option>
 		  	<option value="Party">Party</option>
+		  	<option value="Fraternity/Sorority Event">Fraternity/Sorority Event</option>
 		  	<option value="Other">Other</option>
 		  </select>
 		</div>
