--- a/client/welcome.html
+++ b/client/welcome.html
@@ -1,18 +1,18 @@
 <template name="welcome">
 	<div class="jumbotron">
-		<h1><img src="http://www.brandeis.edu/now/2015/august/images/15orientation405.jpg" height="100" width="200" align="middle"> Prepare to Party For Free!</h1>
+		<h1><img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4f/Brandeis_Ollie.jpg/220px-Brandeis_Ollie.jpg" height="200" width="200" align="middle"> Prepare to Party For Free!</h1>
 		<p>
 			We Promise To Provide You The Best App! 
 				It will help you to find places where parties and free food are held!!!! Let's Go Brandeis!
 		</p>
 
 	</div>
-	
+	<div class="jumbotron">
 	{{#if currentUser}}
 	See, You are logged in the Fun!
 	{{else}}
 	You should log in, if you want to see parties!
 	{{/if}}
-
+	</div>
 
 </template>
