--- a/client/about.html
+++ b/client/about.html
@@ -10,29 +10,30 @@
 </div>
 
 <div class="jumbotron">
-<table border="1" style="width:100%">
+
   <tr>
-    <td><img src="https://c.tadst.com/gfx/300h/calendar.png?1" class="img-responsive img-thumbnail" alt="Responsive image" height="200" width="200" align="middle"> <h2> Events</h2>
+    <td><img src="http://m2.i.pbase.com/g4/19/291919/2/64055412.uVa6Oscu.jpg" class="img-responsive img-thumbnail" alt="Responsive image" height="200" width="1000" align="middle"> <h2> Events</h2>
 				<p>By clicking the Events tab above you will have access to our data base of up coming events and also a forum for you to post events of your own </p>
 	</td>
-    <td><img src="http://www.aviusinsight.com/images/main/happymetre.png" class="img-responsive img-thumbnail" alt="Responsive image" height="200" width="200" align="middle"><p>
+    <td>
+    	<p>
 				<h2>Feedback</h2>
 				In the Fedback tab above you are able to tell us how you feel about our website, positive or negative, in the hopes to make the best website for our members.
 				</p>
 	</td> 
   </tr>
   <tr>
-    <td><img src="http://cliparts.co/cliparts/5iR/X84/5iRX84y4T.png" class="img-responsive img-thumbnail" alt="Responsive image" height="200" width="200" align="middle"><p>
+    <td>
+    	<p>
 				<h2>Carpool</h2>
 				In the Fedback tab above you are able to tell us how you feel about our website, positive or negative, in the hopes to make the best website for our members.
 				</p>
 	</td>
-    <td><img src="http://images.clipartpanda.com/map-clipart-travel-map2.png           +" class="img-responsive img-thumbnail" alt="Responsive image" height="200" width="200" align="middle">
+    <td>
     	<h2> Map</h2>
 				<p>By clicking the Events tab above you will have access to our data base of up coming events and also a forum for you to post events of your own </p>
 	 </td> 
   </tr>
-  </table>
   </div>
   </div>      
 
