--- a/client/events.html
+++ b/client/events.html
@@ -1,7 +1,7 @@
 <template name="events">	
 	{{#if currentUser}}
 
-	<form id="eventform" class="bg-danger">
+	<form id="eventform" class="bg-success">
 		<div class="input-group">
 		  <span class="input-group-addon">Name</span>
 		  <input type="text" id="eventname" class="form-control">
@@ -47,7 +47,7 @@
 	</form>
 
 		<br>
-	<div class="panel panel-danger">
+	<div class="panel panel-success">
 	  <div class="panel-heading">
 	  	<h5>Events {{numevents}}</h5>
 	  </div>
